# neosr

./: .gitignore  check.sh  config_walkthrough.md  convert.py  lkdn_arch.py  options_walkthrough.md  pyproject.toml  readme.md  setup.cfg  setup.py  test.py  test.yml  train.py
.github/workflows/: lint-backend.yml
dataset/: create_lmdb.py  readme.md
dataset/util/: calculate_lpips.py  calculate_psnr_ssim.py  create_lmdb.py  extract_subimages.py  generate_meta_info.py  generate_meta_info_pairdata.py
experiments/052_ESRGAN_x4_f64b23_DIV2K_400k_B16G1_051pretrain_wandb/: train_ESRGAN_x4.yml
experiments/052_ESRGAN_x4_f64b23_DIV2K_400k_B16G1_051pretrain_wandb_archived_20230724_034009/: train_ESRGAN_x4.yml
license/: readme.md
licenses/: readme.md
neosr/: __init__.py  test.py  train.py
neosr/archs/: __init__.py  a2fpn_arch.py  agdn_arch.py  arch_util.py  atd_arch.py  bpp_arch.py  camixersr_arch.py  cfat_arch.py  compact_arch.py  craft_arch.py  cugan_arch.py  dat_arch.py  dct_arch.py  dctlsa_arch.py  desrgan_arch.py  discriminator_arch.py  ditn_arch.py  drct_arch.py  dunet_arch.py  dwt_arch.py  ea2fpn_arch.py  edat_arch.py  efen_arch.py  eimn_arch.py  elunet_arch.py  esrgan_arch.py  fiwhn_arch.py  grformer_arch.py  hadn_arch.py  hasn_arch.py  hat_arch.py  hdsrnet_arch.py  hitsrf_arch.py  hma_arch.py  krgn_arch.py  lkdn_arch.py  lmlt_arch.py  man_arch.py  mdbn_arch.py  mosr_arch.py  (+25 more)
neosr/data/: __init__.py  augmentations.py  data_sampler.py  data_util.py  degradations.py  file_client.py  otf_dataset.py  otf_paired_dataset.py  paired_dataset.py  paired_image_dataset.py  prefetch_dataloader.py  realesrgan_dataset.py  realesrgan_paired_dataset.py  single_dataset.py  single_image_dataset.py  transforms.py
neosr/losses/: __init__.py  basic_loss.py  color_loss.py  consistency_loss.py  dists_loss.py  ff_loss.py  focalfrequency_loss.py  gan_loss.py  gradvar_loss.py  gw_loss.py  kl_loss.py  ldl_loss.py  loss_util.py  luma_loss.py  ncc_loss.py  ssim_loss.py  vgg_perceptual_loss.py  wavelet_guided.py
neosr/metrics/: __init__.py  calculate.py  metric_util.py  psnr_ssim.py
neosr/metrics/test_metrics/: test_psnr_ssim.py
neosr/models/: __init__.py  base.py  base_model.py  default.py  esrgan_model.py  generic.py  image.py  otf.py  otf_paired.py  realesrgan_model.py  realesrnet_model.py  sisr.py  sr_model.py  srgan_model.py  swinir_model.py
neosr/optimizers/: __init__.py  adaml_optim.py  adamw_sf.py  adamw_win.py  adan.py  adan_optim.py  adan_sf.py  fsam.py
neosr/utils/: __init__.py  color_util.py  diffjpeg.py  dist_util.py  file_client.py  img_process_util.py  img_util.py  lmdb_util.py  logger.py  misc.py  options.py  registry.py  rng.py
options/: amp_train.yml  test.yml  test_ESRGAN_x4_woGT.yml  test_agdn.yml  test_atd.toml  test_atd.yml  test_bpp.yml  test_camixersr.yml  test_compact.toml  test_compact.yml  test_craft.toml  test_craft.yml  test_cugan.toml  test_cugan.yml  test_dat.toml  test_dat.yml  test_dct.toml  test_dctlsa.toml  test_dctlsa.yml  test_ditn.toml  test_ditn.yml  test_drct.toml  test_drct.yml  test_dwt.yml  test_edat.yml  test_efen.yml  test_eimn.toml  test_esrgan.toml  test_esrgan.yml  test_fiwhn.toml  test_grformer.toml  test_hadn.yml  test_hasn.toml  test_hat.toml  test_hat.yml  test_hdsrnet.yml  test_hitsrf.toml  test_hma.toml  test_krgn.toml  test_lmlt.toml  (+178 more)
tb_logger/052_ESRGAN_x4_f64b23_DIV2K_400k_B16G1_051pretrain_wandb/: events.out.tfevents.1690170009.anon.34138.0
tb_logger/052_ESRGAN_x4_f64b23_DIV2K_400k_B16G1_051pretrain_wandb_archived_20230724_034009/: events.out.tfevents.1690168381.anon.31885.0
