[tool.poetry]
name = "neosr"
version = "0.1.0"
description = "neosr, a framework for training real-world single-image super-resolution networks."
authors = ["musl"]
license = "Apache 2.0"
readme = "readme.md"

[tool.poetry.dependencies]
einops = "^0.6.1"
lmdb = "^1.5.1"
numpy = "^1.25.2"
opencv-python-headless = "^4.8.1.78"
python = "^3.12"
pywavelets = "^1.5.0"
scipy = "^1.11.1"
tqdm = "^4.65.0"
tb-nightly = "^2.18.0a20240708"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D", "COM812", "ISC001", "T201", "E501", "T201", "D", "CPY", "TD002", "TD003", "COM812", "ISC001", "N8", "S101", "G004", "ERA001", "PLR", "C90", "E722", "B904", "FBT001", "FBT002", "SLF001", "S311", "FIX", "ANN" ]
exclude = ["*_arch.py"]
target-version = "py312"
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
