[tool.poetry]
name = "neosr"
version = "0.1.0"
description = "neosr, a framework for training real-world single-image super-resolution networks."
authors = ["musl"]
license = "Apache 2.0"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
einops = "^0.8"
lmdb = "^1.5.1"
numpy = "^2.1.0"
opencv-python-headless = "^4.10"
pywavelets = "^1.7.0"
scipy = "^1.14"
tqdm = "^4.66"
tb-nightly = "^2.19.0a20241004"
torch = {version = "^2.4.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.19.1+cu124", source = "pytorch-gpu-src"}

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D", "DOC", "COM812", "ISC001", "T201", "E501", "T201", "CPY", "TD002", "TD003", "COM812", "ISC001", "N8", "S101", "G004", "ERA001", "PLR", "C90", "E722", "B904", "FBT001", "FBT002", "SLF001", "S311", "FIX", "PLC0206", "ANN", "PGH003", "E741"]
exclude = ["*_arch.py"]
target-version = "py312"
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"neosr/__init__.py" = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
