[tool.poetry]
name = "neosr"
version = "1.0.0"
description = "neosr is an open-source framework for training super-resolution models. It provides a comprehensive and reproducible environment for achieving state-of-the-art image restoration results, making it suitable for both the enthusiastic community, professionals and machine learning academic researchers. It serves as a versatile platform and aims to bridge the gap between practical application and academic research in the field."
authors = ["neosr-project"]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/neosr-project/neosr"
documentation = "https://github.com/neosr-project/neosr/wiki"

[tool.poetry.dependencies]
python = "^3.12"
einops = "^0.8"
lmdb = "^1.5.1"
numpy = "^2.1.2"
opencv-python-headless = "^4.10"
pywavelets = "^1.7.0"
scipy = "^1.14.1"
tqdm = "^4.66.5"
tb-nightly = "^2.19.0a20241004"
torch = {version = "^2.5.0+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.0+cu124", source = "pytorch-gpu-src"}
onnx = "^1.17.0"
onnxruntime-gpu = "^1.19.2"
onnxconverter-common = "^1.14.0"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D", "DOC", "COM812", "ISC001", "T201", "E501", "T201", "CPY", "TD002", "TD003", "COM812", "ISC001", "N8", "S101", "G004", "ERA001", "PLR", "C90", "E722", "B904", "FBT001", "FBT002", "SLF001", "S311", "FIX", "PLC0206", "ANN", "PGH003", "E741"]
exclude = ["*_arch.py"]
target-version = "py312"
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"neosr/__init__.py" = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
